区间问题